--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,6 +27,11 @@ spring:
   output:
     ansi:
       enabled: DETECT
+  
+  servlet:
+    multipart:
+      max-file-size: 30MB
+      max-request-size: 30MB
 
 myapp:
   datasource:
