--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,17 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- Alfresco -->
+	    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.apache.httpcomponents</groupId>
+	        <artifactId>httpmime</artifactId>
+	    </dependency>
+	        
 	</dependencies>
 
 	<build>
