--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -30,7 +30,10 @@ spring:
   jpa:
     hibernate:
      ddl-auto: update
-    
+  servlet:
+    multipart:
+      max-file-size: 30MB
+      max-request-size: 30MB 
 
 myapp:
   datasource:
