avances de observaciones

--- a/src/main/resources/preguntas-alternativas.properties
+++ b/src/main/resources/preguntas-alternativas.properties
@@ -1,24 +1,29 @@
-#lista de preguntas  y alternativas con valores extraidos de la Base de datos(aplicable para dev y produccion)
+#lista de IDs de algunas preguntas  y alternativas, extraidos de la base de datos PostgreSQL, esto es aplicable para el modulo de reportes y anexos del VMA
+#Si se cambiace algun  valor de las preguntas o alternativas en la BD, es necesario actualizar en este properties.
 
-CUESTIONARIO.PREGUNTA_SI_NO_ID = 1;
-CUESTIONARIO.PREGUNTA_NUMERO_TRABAJADORES_EMPRESA_PRESTADORA_ID = 3;
-CUESTIONARIO.ALTERNATIVA_UND_IDENTIFICADOS_PARCIAL_ID = 16;
-CUESTIONARIO.ALTERNATIVA_UND_INSPECCIONADOS_PARCIAL_ID = 22;
-CUESTIONARIO.ALTERNATIVA_TOTAL_INSPECCIONADOS_ID = 22;
-CUESTIONARIO.ALTERNATIVA_SOLICITARON_DIAGRAMA_FLUJO_ID = 24;
-CUESTIONARIO.ALTERNATIVA_PRESENTARON_DIAGRAMA_FLUJO_ID = 14;
-CUESTIONARIO.PREGUNTA_UND_CAJA_REGISTRO_ID= 10;
-CUESTIONARIO.ALTERNATIVA_UND_INSCRITOS_ID= 18;
-CUESTIONARIO.PREGUNTA_UND_TOMA_MUESTRA_INOPINADA_ID= 11;
-CUESTIONARIO.PREGUNTA_TOTAL_MUESTRAS_INOPINADAS_ID= 12;
-CUESTIONARIO.ALTERNATIVA_UND_SOBREPASAN_PARAMETRO_ANEXO1_ID= 1;
-CUESTIONARIO.ALTERNATIVA_UND_FACTURARON_PAGO_ADICIONAL_ID= 3;
-CUESTIONARIO.ALTERNATIVA_UND_REALIZARON_PAGO_ADICIONAL_ID= 35;
-CUESTIONARIO.ALTERNATIVA_UND_SOBREPASAN_PARAMETRO_ANEXO2_ID= 26;
-CUESTIONARIO.ALTERNATIVA_UND_OTORGADO_PLAZO_ADICIONAL_ID= 28;
-CUESTIONARIO.ALTERNATIVA_UND_SUSCRITO_PLAZO_OTORGADO_ID= 30;
-CUESTIONARIO.PREGUNTA_CANTIDAD_RECLAMOS_RECIBIDOS_VMA_ID= 19;
-CUESTIONARIO.PREGUNTA_CANTIDAD_RECLAMOS_FUNDADOS_VMA_ID= 20;
-CUESTIONARIO.PREGUNTA_COSTO_TOTAL_ANUAL_INCURRIDO_ID = 23;
-CUESTIONARIO.PREGUNTA_COSTO_TOTAL_ANUAL_MUESTRAS_INOPINADAS_ID = 24;
-CUESTIONARIO.PREGUNTA_COSTO_ANUAL_POR_OTROS_GASTOS_ID = 29;
+cuestionario.id_pregunta_si_no=1
+cuestionario.id_pregunta_numero_trabajadores_empresa_prestadora=3
+cuestionario.id_alternativa_und_identificados_parcial=3
+cuestionario.id_alternativa_und_inspeccionados_parcial=5
+cuestionario.id_alternativa_solicitaron_diagrama_flujo=7
+cuestionario.id_alternativa_presentaron_diagrama_flujo=9
+cuestionario.id_alternativa_und_inscritos=11
+cuestionario.id_pregunta_und_caja_registro=10
+cuestionario.id_pregunta_und_toma_muestra_inopinada=11
+cuestionario.id_pregunta_total_muestras_inopinadas=12
+cuestionario.id_alternativa_und_facturaron_pago_adicional=17
+cuestionario.id_alternativa_und_realizaron_pago_adicional=19
+cuestionario.id_alternativa_und_sobrepasan_parametro_anexo1=15
+cuestionario.id_alternativa_und_sobrepasan_parametro_anexo2=21
+cuestionario.id_alternativa_und_otorgado_plazo_adicional=23
+cuestionario.id_alternativa_und_suscrito_plazo_otorgado=25
+cuestionario.id_pregunta_cantidad_reclamos_recibidos_vma=19
+cuestionario.id_pregunta_cantidad_reclamos_fundados_vma=20
+cuestionario.id_pregunta_costo_total_anual_und=23
+cuestionario.id_pregunta_costo_total_anual_muestras_inopinadas=24
+cuestionario.id_pregunta_otros_gastos_implementacion=29
+cuestionario.id_pregunta_ingresos_facturados_vma=21
+cuestionario.id_pregunta_remitio_informe_tecnico=31
+
+
+
