--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ spring:
       max-file-size: 30MB
       max-request-size: 30MB 
 
+ 
 myapp:
   datasource:
     remote-secret-ops: http://10.10.3.115:3000
@@ -46,9 +47,11 @@ myapp:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  app-front-url: https://appsdev.sunass.gob.pe/vma/#
+
 
 cors:
-  urls: http://localhost:4501,http://10.10.3.93,http://appsdev.sunass.gob.pe,https://appsdev.sunass.gob.pe
+  urls: http://localhost:4501,http://10.10.3.93,http://10.10.3.141,http://appsdev.sunass.gob.pe,https://appsdev.sunass.gob.pe,
           
 security:
   jwt:
