--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -48,6 +48,7 @@ myapp:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   app-front-url: https://appsdev.sunass.gob.pe/vma/#
+  dias-expiracion: 2
 
 
 cors:
