--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -52,7 +52,7 @@ myapp:
 
 
 cors:
-  urls: http://localhost:4501,http://10.10.3.93,http://10.10.3.141,http://appsdev.sunass.gob.pe,https://appsdev.sunass.gob.pe,
+  urls: http://localhost:4501,http://10.10.3.93,http://10.10.3.141,http://appsdev.sunass.gob.pe,https://appsdev.sunass.gob.pe
           
 security:
   jwt:
