--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -38,17 +38,17 @@ spring:
       max-file-size: 30MB
       max-request-size: 30MB
      
-  mail:  #para localhost
-    host: smtp.gmail.com
-    port: 587
-    username: apiconnectibm1@gmail.com
-    password: cgat smzw bpuo oopa
-    properties:
-      mail:
-        smtp:
-         auth: true
-         starttls:
-            enable: true
+#  mail:  #para localhost
+#    host: smtp.gmail.com
+#    port: 587
+#    username: apiconnectibm1@gmail.com
+#    password: cgat smzw bpuo oopa
+#    properties:
+#      mail:
+#        smtp:
+#         auth: true
+#         starttls:
+#            enable: true
             
 myapp:
   datasource:
@@ -60,8 +60,8 @@ myapp:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     
-  app-front-url: http://localhost:4200/#/login
-  dias-expiracion: 2
+  app-front-url: http://localhost:4200/#
+  dias-expiracion: 5  #probar con otros valores, por ejemplo que esto equivalga a minutos en el java
 
 cors:
   urls: 
