--- a/src/main/resources/preguntas-alternativas.properties
+++ b/src/main/resources/preguntas-alternativas.properties
@@ -23,7 +23,8 @@ cuestionario.id_pregunta_costo_total_anual_und=23
 cuestionario.id_pregunta_costo_total_anual_muestras_inopinadas=24
 cuestionario.id_pregunta_otros_gastos_implementacion=29
 cuestionario.id_pregunta_ingresos_facturados_vma=21
-cuestionario.id_pregunta_remitio_informe_tecnico=31
+cuestionario.id_pregunta_remitio_informe_tecnico=30  
+#pendiente si va el 31 o 32
 
 
 
