--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -60,8 +60,8 @@ myapp:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     
-  app-front-url: http://localhost:4200/#
-  dias-expiracion: 5  #probar con otros valores, por ejemplo que esto equivalga a minutos en el java
+  #app-front-url: http://localhost:4200/#
+  dias-expiracion: 5
 
 cors:
   urls: 
