--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,7 +27,9 @@ spring:
   output:
     ansi:
       enabled: DETECT
-  
+  jpa:
+    hibernate:
+     ddl-auto: update
   servlet:
     multipart:
       max-file-size: 30MB
