--- a/src/main/resources/preguntas-alternativas.properties
+++ b/src/main/resources/preguntas-alternativas.properties
@@ -23,8 +23,10 @@ cuestionario.id_pregunta_costo_total_anual_und=21
 cuestionario.id_pregunta_costo_total_anual_muestras_inopinadas=22
 cuestionario.id_pregunta_otros_gastos_implementacion=27
 cuestionario.id_pregunta_ingresos_facturados_vma=28
-cuestionario.id_pregunta_remitio_informe_tecnico=30  
-#pendiente si va el 30 o 31
+
+#se refiere al Anexo 2.2 de la Norma complementaria VMA.
+cuestionario.id_pregunta_remitio_anexo_norma_complementaria=31
+
 
 
 
