mejoras,agregando tipo de empresa

--- a/src/main/resources/preguntas-alternativas.properties
+++ b/src/main/resources/preguntas-alternativas.properties
@@ -25,7 +25,7 @@ cuestionario.id_pregunta_otros_gastos_implementacion=27
 cuestionario.id_pregunta_ingresos_facturados_vma=28
 
 #se refiere al Anexo 2.2 de la Norma complementaria VMA.
-cuestionario.id_pregunta_remitio_anexo_norma_complementaria=31
+cuestionario.id_pregunta_anexo_2_2_norma_complementaria =31
 
 
 
