agregando try catch para ver el loggin de errores

--- a/src/main/resources/alfresco.properties
+++ b/src/main/resources/alfresco.properties
@@ -7,7 +7,7 @@ alfresco.SpaceStore=68b878c9-0106-415f-b4e0-3be12bcb2ad8
 
 
 #PRODUCCION
-#alfresco.url=http://
-#alfresco.user=admin
+#alfresco.url=
+#alfresco.user=
 #alfresco.password=
 #alfresco.carpeta=
