--- a/src/main/resources/preguntas-alternativas.properties
+++ b/src/main/resources/preguntas-alternativas.properties
@@ -1,5 +1,6 @@
-#lista de IDs de algunas preguntas  y alternativas, extraidos de la base de datos PostgreSQL, esto es aplicable para el modulo de reportes y anexos del VMA
-#Si se cambiace algun  valor de las preguntas o alternativas en la BD, es necesario actualizar en este properties.
+#lista de IDs de algunas preguntas  y alternativas, extraidos de la base de datos , esto es aplicable para el modulo de reportes y anexos del VMA
+#Si se cambiace algun  id de las preguntas o alternativas en sus respectivas tablas de la BD(sea en preguntas o alternativas),
+# es necesario actualizar   este properties, para que funcione los calculos de los reportes y anexos.
 
 cuestionario.id_pregunta_si_no=1
 cuestionario.id_pregunta_numero_trabajadores_empresa_prestadora=3
