--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -59,9 +59,16 @@ myapp:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-    
   #app-front-url: http://localhost:4200/#
   dias-expiracion: 5
+  alfresco:
+    #remote-secret-ops: http://10.10.3.115:3000
+    #token: 0311874a-a7c1-4d74-b144-2f597f823359
+    url: https://alfrescodev.sunass.gob.pe/
+    user: uvma
+    password: =okKmqV*7637
+    carpeta: VMA
+    spaceStore: 68b878c9-0106-415f-b4e0-3be12bcb2ad8
 
 cors:
   urls: 
@@ -80,5 +87,12 @@ ldap:
   timeout: 3000
   url: ldap://10.10.3.9:389
   user: userval
+
+alfresco:
+  url: https://alfrescodev.sunass.gob.pe/
+  user: uvma
+  password: =okKmqV*7637
+  carpeta: VMA
+  spaceStore: 68b878c9-0106-415f-b4e0-3be12bcb2ad8
   
 
