--- a/src/main/resources/application-qa.yml
+++ b/src/main/resources/application-qa.yml
@@ -48,13 +48,22 @@ myapp:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   #app-front-url: https://appsdev.sunass.gob.pe/vma/#
   dias-expiracion: 5
+  
+  alfresco:
+    remote-secret-ops: http://10.10.3.115:3000
+    token: 0311874a-a7c1-4d74-b144-2f597f823359
+    #url: https://alfrescodev.sunass.gob.pe/
+    #user: uvma
+    #password: =okKmqV*7637
+    #carpeta: VMA
+    #spaceStore: 68b878c9-0106-415f-b4e0-3be12bcb2ad8
 
 cors:
-  urls: http://localhost:4601,http://10.10.3.184
+  urls: http://localhost:4501,http://10.10.3.184
         
 security:
   jwt:
-    expiration-minutes: 30
+    expiration-minutes: 60
 
 ldap:
   cn: OU=Usuarios,DC=sunass,DC=gob,DC=pe
@@ -65,4 +74,11 @@ ldap:
   prefix: '@sunass.gob.pe'
   timeout: 3000
   url: ldap://10.10.3.9:389
+
+alfresco:
+  url: 
+  user: uvma
+  password: 
+  carpeta: VMA
+  spaceStore: 
   
