--- a/src/main/resources/correo.properties
+++ b/src/main/resources/correo.properties
@@ -2,5 +2,4 @@ mail.remitente=adminweb@sunass.gob.pe
 mail.password=Adm2012web
 mail.smtphost=10.10.3.141
 mail.autor=Sunass
-#mail.cc=dfVMA@sunass.gob.pe
-mail.cc=lportocarrero@sunass.gob.pe
+mail.cc=adminweb@sunass.gob.pe
